--- a/app/src/main/res/xml/scene_header.xml
+++ b/app/src/main/res/xml/scene_header.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright 2020. hi-dhl (Jack Deng)
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
@@ -15,7 +31,7 @@
             android:id="@id/background"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:srcCompat="@drawable/bottom_border_red"
+            app:srcCompat="@drawable/main_head_bg"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
@@ -30,7 +46,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="@string/app_name"
-            android:textColor="@color/text"
+            android:textColor="@color/color_white"
             motion:autoSizeTextType="uniform"
             motion:layout_constraintBottom_toTopOf="@+id/textView"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +77,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:textColor="@color/text"
+            android:textColor="@color/color_white"
             android:visibility="gone"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +92,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:visibility="invisible"
-            app:srcCompat="@drawable/bottom_border_red"
+            app:srcCompat="@drawable/main_head_bg"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
