--- a/app/src/main/res/drawable/recycle_item_ripple.xml
+++ b/app/src/main/res/drawable/recycle_item_ripple.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright 2020. hi-dhl (Jack Deng)
   ~
@@ -14,9 +15,7 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <string name="app_name">PokemonGo</string>
-    <string name="footer_retary">重试</string>
-    <string name="weight">Weight</string>
-    <string name="height">Height</string>
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/home_bottom_bg_pre" android:state_pressed="true" />
+    <item android:drawable="@drawable/home_bottom_bg_nor" />
+</selector>
