--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright 2020. hi-dhl (Jack Deng)
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -7,7 +23,7 @@
 
         <variable
             name="pokemonListModel"
-            type="com.hi.dhl.pokemon.model.PokemonListModel" />
+            type="com.hi.dhl.pokemon.model.PokemonItemModel" />
 
         <variable
             name="viewModel"
@@ -24,18 +40,17 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/lightTeal"
+            android:background="@color/color_light_teal"
             tools:context=".ui.main.MainActivity">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/ic_arrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_10dp"
                 android:layout_marginTop="@dimen/margin_10dp"
                 android:padding="@dimen/space_3dp"
                 android:src="@drawable/ic_arrow"
-                app:finish="@{true}"
+                app:bindFinish="@{true}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,7 +59,7 @@
                 android:layout_width="@dimen/details_img_w_h"
                 android:layout_height="@dimen/details_img_w_h"
                 android:layout_marginTop="@dimen/margin_20dp"
-                android:src="@drawable/poke001"
+                android:src="@drawable/default_poke"
                 android:translationZ="100dp"
                 app:bindingAvator="@{pokemonListModel.url}"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -52,7 +67,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/pokemonName"
+                android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_20dp"
@@ -77,14 +92,14 @@
                 android:translationZ="100dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/pokemonName"
-                app:maxProgressValue="@{viewModel.pokemon.maxHp}"
-                app:progressValue="@{viewModel.pokemon.hp}"
+                app:layout_constraintTop_toBottomOf="@+id/name"
+                app:bindProgressMaxValue="@{viewModel.pokemon.maxHp}"
+                app:bindProgressValue="@{viewModel.pokemon.hp}"
                 app:progress_animate_duration="@integer/progress_animate_duration"
                 app:progress_color="@color/color_progress_1"
                 app:progress_color_background="@color/color_progress_bg"
-                app:progress_paint_bg_width="@dimen/circle_stroke_width"
-                app:progress_paint_value_width="@dimen/circle_stroke_width"
+                app:progress_paint_bg_width="@dimen/progress_paint_bg_width"
+                app:progress_paint_value_width="@dimen/progress_paint_bg_width"
                 app:progress_text_color="@android:color/black"
                 app:progress_text_size="@dimen/text_size_12sp"
                 app:progress_type="@integer/porgress_tpye_round_rect" />
@@ -111,7 +126,6 @@
                 app:cardCornerRadius="@dimen/common_radius_8dp"
                 app:cardUseCompatPadding="true" />
 
-
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/weight"
                 style="@style/TextStyle"
@@ -127,7 +141,7 @@
                 tools:text="24.0 KG" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/weight_title"
+                android:id="@+id/labelWeight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/weight"
@@ -152,7 +166,7 @@
                 tools:text="11 M" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/height_title"
+                android:id="@+id/labelHeight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/height"
@@ -162,134 +176,10 @@
                 app:layout_constraintStart_toEndOf="@+id/weight"
                 app:layout_constraintTop_toBottomOf="@+id/height" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_30dp"
-                android:layout_marginTop="@dimen/margin_60dp"
-                android:layout_marginEnd="@dimen/margin_30dp"
-                android:orientation="vertical"
-                android:translationZ="100dp"
-                app:layout_constraintTop_toBottomOf="@+id/height_title">
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/labelAttack"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_5dp"
-                    android:layout_marginBottom="@dimen/margin_5dp"
-                    android:text="ATK"
-                    android:textColor="@android:color/black" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/labelAttack"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="@dimen/margin_5dp"
-                    android:layout_marginBottom="@dimen/margin_5dp"
-                    android:text="@{viewModel.pokemon.getAttackString}"
-                    android:textColor="@android:color/black"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    tools:text="200/1000" />
-
-
-                <com.hi.dhl.jprogressview.JProgressView
-                    android:id="@+id/porgressAttack"
-                    android:layout_width="match_parent"
-                    android:layout_height="18dp"
-                    android:layout_below="@+id/labelAttack"
-                    android:translationZ="100dp"
-                    app:maxProgressValue="@{viewModel.pokemon.maxAttack}"
-                    app:progressValue="@{viewModel.pokemon.attack}"
-                    app:progress_animate_duration="@integer/progress_animate_duration"
-                    app:progress_color="@color/color_progress_2"
-                    app:progress_color_background="@color/color_progress_bg"
-                    app:progress_paint_bg_width="@dimen/circle_stroke_width"
-                    app:progress_paint_value_width="@dimen/circle_stroke_width"
-                    app:progress_text_color="@android:color/black"
-                    app:progress_text_size="@dimen/text_size_12sp"
-                    app:progress_type="@integer/porgress_tpye_round_rect" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/speed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/labelAttack"
-                    android:layout_marginStart="@dimen/margin_5dp"
-                    android:layout_marginTop="@dimen/margin_30dp"
-                    android:layout_marginBottom="@dimen/margin_5dp"
-                    android:text="SPEED"
-                    android:textColor="@android:color/black" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/speed"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="@dimen/margin_5dp"
-                    android:layout_marginBottom="@dimen/margin_5dp"
-                    android:text="@{viewModel.pokemon.getSpeedString}"
-                    android:textColor="@android:color/black"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    tools:text="200/1000" />
-
-                <com.hi.dhl.jprogressview.JProgressView
-                    android:layout_width="match_parent"
-                    android:layout_height="18dp"
-                    android:layout_below="@+id/speed"
-                    android:translationZ="100dp"
-                    app:maxProgressValue="@{viewModel.pokemon.maxSpeed}"
-                    app:progressValue="@{viewModel.pokemon.speed}"
-                    app:progress_animate_duration="@integer/progress_animate_duration"
-                    app:progress_color="@color/color_progress_3"
-                    app:progress_color_background="@color/color_progress_bg"
-                    app:progress_paint_bg_width="@dimen/circle_stroke_width"
-                    app:progress_paint_value_width="@dimen/circle_stroke_width"
-                    app:progress_text_color="@android:color/black"
-                    app:progress_text_size="@dimen/text_size_12sp"
-                    app:progress_type="@integer/porgress_tpye_round_rect" />
-
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/exp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/speed"
-                    android:layout_marginStart="@dimen/margin_5dp"
-                    android:layout_marginTop="@dimen/margin_40dp"
-                    android:layout_marginBottom="@dimen/margin_5dp"
-                    android:text="EXP"
-                    android:textColor="@android:color/black" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/exp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="@dimen/margin_5dp"
-                    android:layout_marginBottom="@dimen/margin_5dp"
-                    android:text="@{viewModel.pokemon.getExpString}"
-                    android:textColor="@android:color/black"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    tools:text="200/1000" />
-
-                <com.hi.dhl.jprogressview.JProgressView
-                    android:layout_width="match_parent"
-                    android:layout_height="18dp"
-                    android:layout_below="@+id/exp"
-                    android:translationZ="100dp"
-                    app:maxProgressValue="@{viewModel.pokemon.maxExp}"
-                    app:progressValue="@{viewModel.pokemon.exp}"
-                    app:progress_animate_duration="@integer/progress_animate_duration"
-                    app:progress_color="@color/color_progress_4"
-                    app:progress_color_background="@color/color_progress_bg"
-                    app:progress_paint_bg_width="@dimen/circle_stroke_width"
-                    app:progress_paint_value_width="@dimen/circle_stroke_width"
-                    app:progress_text_color="@android:color/black"
-                    app:progress_text_size="@dimen/text_size_12sp"
-                    app:progress_type="@integer/porgress_tpye_round_rect" />
-            </RelativeLayout>
+            <include
+                android:id="@+id/include_progress"
+                layout="@layout/include_details_progress"
+                app:viewModel="@{viewModel}" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
