--- a/app/src/main/res/layout/recycle_item_pokemon.xml
+++ b/app/src/main/res/layout/recycle_item_pokemon.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright 2020. hi-dhl (Jack Deng)
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -6,7 +22,7 @@
 
         <variable
             name="pokemon"
-            type="com.hi.dhl.pokemon.model.PokemonListModel" />
+            type="com.hi.dhl.pokemon.model.PokemonItemModel" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -16,10 +32,9 @@
         app:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:id="@+id/itemBgView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/ripple_list_item_bg"
+            android:background="@drawable/recycle_item_ripple"
             android:gravity="center"
             android:orientation="vertical">
 
