--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--
+  ~ Copyright 2020. hi-dhl (Jack Deng)
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <resources>
 
 
@@ -66,7 +82,6 @@
     <dimen name="recycle_item_base_margin">10dp</dimen>
     <dimen name="details_img_w_h">200dp</dimen>
     <dimen name="details_img_m_t">180dp</dimen>
-
     <dimen name="progress_height">6dp</dimen>
-    <dimen name="circle_stroke_width">10dp</dimen>
+    <dimen name="progress_paint_bg_width">10dp</dimen>
 </resources>
