style: optimize code

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -108,7 +108,7 @@
                 android:id="@+id/hp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.pokemon.getHpString}"
+                android:text="@{viewModel.pokemon.generatetHP}"
                 android:textColor="@android:color/black"
                 android:translationZ="100dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -132,7 +132,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_20dp"
-                android:text="@{viewModel.pokemon.getWeightString}"
+                android:text="@{viewModel.pokemon.generatetWeight}"
                 android:textSize="21sp"
                 android:translationZ="100dp"
                 app:layout_constraintEnd_toStartOf="@+id/height"
@@ -157,7 +157,7 @@
                 style="@style/TextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.pokemon.getHeightString}"
+                android:text="@{viewModel.pokemon.generateHeight}"
                 android:textSize="21sp"
                 android:translationZ="100dp"
                 app:layout_constraintEnd_toEndOf="parent"
