--- a/app/src/main/res/layout/motion_coordinatorlayout_header.xml
+++ b/app/src/main/res/layout/motion_coordinatorlayout_header.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2020. hi-dhl (Jack Deng)
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -22,7 +21,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:minHeight="40dp"
+    android:minHeight="70dp"
     app:layoutDescription="@xml/scene_header"
     app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">
 
@@ -89,6 +88,29 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name" />
+
+    <LinearLayout
+        android:id="@+id/search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/space_20dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/search_height"
+            android:layout_marginStart="@dimen/margin_20dp"
+            android:layout_marginTop="@dimen/margin_8dp"
+            android:layout_marginEnd="@dimen/margin_20dp"
+            android:background="@drawable/background_search_bar"
+            android:gravity="center"
+            android:hint="@string/search_et_hit"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black"
+            android:textSize="@dimen/text_size_12sp" />
+
+    </LinearLayout>
 
 
 </com.hi.dhl.pokemon.utils.CollapsibleToolbar>
