--- a/app/src/main/res/layout/motion_coordinatorlayout_header.xml
+++ b/app/src/main/res/layout/motion_coordinatorlayout_header.xml
@@ -96,6 +96,8 @@
         android:paddingBottom="@dimen/space_20dp"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
+        <!-- 也可以使用androidx.appcompat.widget.SearchView  -->
+
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/searchView"
             android:layout_width="match_parent"
