--- a/app/src/main/res/drawable/home_bottom_bg_nor.xml
+++ b/app/src/main/res/drawable/home_bottom_bg_nor.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2020. hi-dhl (Jack Deng)
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,9 +14,9 @@
   ~ limitations under the License.
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--<stroke android:width="1dp" android:color="@color/boder"/>-->
-    <solid android:color="@android:color/white"/>
+    <solid android:color="@android:color/white" />
 
 </shape>
